[package]
name = "rising_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1.0", features = [
  "net",
  "signal",
  "io-std",
  "io-util",
  "rt-multi-thread",
  "macros",
  "process",
] }
time = { version = "0.3", features = ["serde-human-readable", "macros"] }
uuid = { version = "1.9", features = ["serde", "v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
dotenvy = "0.15"
url = "2.5"
# 密码加密
argon2 = { version = "0.5" }
rand_core = { version = "0.6", features = ["std"] }
secrecy = { version = "0.8" }
# 数据验证
validator = { version = "0.18", features = ["derive"] }
# 数据库
diesel = { version = "2.2", features = [
  "postgres",
  "time",
  "uuid",
  "serde_json",
] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
deadpool-diesel = { version = "0.6", features = ["postgres", "tracing"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
